# cognitive-os

./: .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  PROMPTS_PROYECTO.MD  README.md  corregir_cognitive.md
cognitive-os/backend/: alembic.ini  pyproject.toml
cognitive-os/backend/alembic/: env.py
cognitive-os/backend/alembic/versions/: 202604300001_initial_operational_schema.py  202604300002_document_ingestion_traceability.py  202604300003_sensitive_tool_approvals.py  202604300004_deepagents_skills_memory.py  202604300005_action_requests.py  202605120001_action_requests_document_generate.py  202605120002_action_requests_browser_preview.py  202605120003_action_requests_payload_executable.py  202605120004_action_requests_browser_interactive.py  202605120005_deepagent_memory_episodic.py  202605120006_personal_tasks_notes.py  202605140001_mail_accounts_messages.py  (+8 more)
cognitive-os/backend/scripts/: auth_gmail.py  auth_google.py  dump_settings_registry.py  seed_canonical_knowledge.py  verify_operator_ready.sh
cognitive-os/backend/tests/: __init__.py  conftest.py  test_action_request_check_constraint.py  test_action_request_eager_defaults.py  test_action_request_workers.py  test_actions.py  test_admin_gated_endpoints.py  test_agents_graph.py  test_alembic_autogenerate.py  test_api.py  test_api_limit_contracts_p2_003.py  test_approval_reaper.py  test_atomic_doc_write.py  test_audit_commercial_auth_matrix.py  test_audit_commercial_calendar_drive_direct_409.py  test_audit_commercial_code_director_stdin_only.py  test_audit_commercial_db_isolation_guard.py  test_audit_commercial_eager_defaults_full_matrix.py  test_audit_commercial_godaddy_dns_gating.py  test_audit_commercial_health_overall_honest.py  test_audit_commercial_mail_smtp_gating.py  test_audit_commercial_mcp_failopen.py  test_audit_commercial_operational_backlog.py  test_audit_commercial_path_traversal.py  test_audit_commercial_reapers_dedicated.py  test_audit_commercial_secrets_redaction.py  test_audit_commercial_test_fixtures_gating.py  test_audit_commercial_workflow_v1_hardening.py  test_backup_restore_scripts.py  test_browser_interactive.py  test_captcha.py  test_celery_config.py  test_chat_doc_ids_validation_p2_004.py  test_chat_stream.py  test_clean_slate_fixture_covers_all_fks.py  test_code_director.py  test_code_director_api.py  test_code_director_deepagent_adapter.py  test_code_director_e2e.py  test_code_director_f9_smoke.py  (+103 more)
(+499 files in other folders)
